[package]
name = "segvec"
version = "0.1.5"
edition = "2018"
license = "MIT"
authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mccolljr/segvec/"
description = "SegVec data structure for rust. Similar to Vec, but allocates memory in chunks of increasing size"

[dev-dependencies]
rand = "0.8.4"
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]
smallvec = { version = "1.10.0", features = ["const_generics", "union"], optional = true }
thin-vec = { version = "0.2.3", optional = true }
num-integer = "0.1.45"

[features]
small-vec = ["smallvec"]
thin-segments = ["thin-vec"]

[[bench]]
name = "segvec_benchmark"
harness = false
