[package]
name = "segvec"
version = "0.2.0"
edition = "2018"
license = "MIT"
authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mccolljr/segvec/"
description = "SegVec data structure for rust. Similar to Vec, but allocates memory in chunks of increasing size"

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]
smallvec = { version = "1.11.2", features = ["const_generics", "union"], optional = true }
num-integer = "0.1.45"
either = "1.9.0"

[features]
small-vec = ["smallvec"]

[[bench]]
name = "segvec_benchmark"
harness = false

[[bench]]
name = "segvec_benchmark2"
harness = false

[[bench]]
name = "slice_and_iter"
harness = false
